--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/health-2082630_1280.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Fully Responsive Design</h2>
-          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+          <h2>Healthcare Improvement Scotland</h2>
+          <p class="lead mb-0">Please have a quick look here to view the work that SIGN have carried out with regards to Guidelines and improving the health of our citizens</p>
         </div>
       </div>
       <div class="row no-gutters">
