--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/health-2082630_1280.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/chartcloud.png');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Healthcare Improvement Scotland</h2>
           <p class="lead mb-0">Please have a quick look here to view the work that SIGN have carried out with regards to Guidelines and improving the health of our citizens</p>
