--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <div class="features-icons-icon d-flex">
               <i class="icon-layers m-auto text-primary"></i>
             </div>
-            <h3>Bootstrap 4 Ready</h3>
-            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+            <h3>SIGN Guidelines in PDF</h3>
+            <p class="lead mb-0">Click here for our guidelines or booklets available for download..</p>
           </div>
         </div>
         <div class="col-lg-4">
