--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="features-icons-icon d-flex">
               <i class="icon-layers m-auto text-primary"></i>
             </div>
-            <h3>SIGN Guidelines in PDF</h3>
+            <h3>PDF SIGN Guidelines</h3>
             <p class="lead mb-0">Click here for our guidelines or booklets available for download..</p>
           </div>
         </div>
