--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <div class="features-icons-icon d-flex">
               <i class="icon-check m-auto text-primary"></i>
             </div>
-            <h3>Easy to Use</h3>
-            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+            <h3>Get Involved</h3>
+            <p class="lead mb-0">The impact of SIGN guidelines: Share your story</p>
           </div>
         </div>
       </div>
