--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <div class="features-icons-icon d-flex">
               <i class="icon-screen-desktop m-auto text-primary"></i>
             </div>
-            <h3>Fully Responsive</h3>
-            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+            <h3>Patient involvement</h3>
+            <p class="lead mb-0">Patient and public involvement network</p>
           </div>
         </div>
         <div class="col-lg-4">
