--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/diabetes-777002_1920.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Updated For Bootstrap 4</h2>
-          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+          <h2>Guidelines in development</h2>
+          <p class="lead mb-0">The guideline will cover preconceptive care, detection and management of gestational diabetes, antenatal care and optimising glucose control, intrapartum and postnatal care.
+
+The full topic proposal can be found here.</p>
         </div>
       </div>
       <div class="row no-gutters">
