--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/diabetes-777002_1920.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2>Guidelines in development</h2>
+          <h2>Guidelines in development - Diabetes in pregnancy</h2>
           <p class="lead mb-0">The guideline will cover preconceptive care, detection and management of gestational diabetes, antenatal care and optimising glucose control, intrapartum and postnatal care.
 
 The full topic proposal can be found here.</p>
