--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ The full topic proposal can be found here.</p>
   <!-- Testimonials -->
   <section class="testimonials text-center bg-light">
     <div class="container">
-      <h2 class="mb-5">How SIGN, and our Guidlines, are received...</h2>
+      <h2 class="mb-5">How SIGN, and our Guidelines, are received...</h2>
       <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
