--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ The full topic proposal can be found here.</p>
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/counselling-3630323_1280.png');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>About Healthcare Improvement Scotland</h2>
-          <p class="lead mb-0>"Healthcare Improvement Scotland is the national healthcare improvement organisation for Scotland and part of NHSScotland and works with staff who provide care in hospitals, GP practices, clinics, NHS boards and with patients, carers, communities and the public.</p>
+          <p class="lead mb-0">Healthcare Improvement Scotland is the national healthcare improvement organisation for Scotland and part of NHSScotland and works with staff who provide care in hospitals, GP practices, clinics, NHS boards and with patients, carers, communities and the public.</p>
         </div>
       </div>
     </div>
